--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,47 @@
 version: '3.8'
 
 services:
-  
-  broker:
-    image: redis:alpine
-    container_name: redis_broker
+  # Broker de Mensajería: Apache Kafka
+  kafka:
+    image: bitnami/kafka:latest
+    container_name: kafka_broker
     ports:
-      - "6379:6379"
+      - "9092:9092"
+    environment:
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - ALLOW_ANONYMOUS_LOGIN=yes
 
-  
+  # Servicio 1: ERP (Productor de eventos)
   erp-service:
     image: python:3.9-slim
     container_name: erp_producer
     depends_on:
-      - broker
+      - kafka
     command: >
-      sh -c "pip install redis && 
-             python -c 'import redis, time; r = redis.Redis(host=\"broker\"); 
-             print(\"Iniciando ERP...\");
-             while True: 
-                 r.publish(\"pedidos\", \"ORDEN-99: Camiseta de Futbol\"); 
-                 print(\"Mensaje enviado: Nueva Orden de Compra\");
+      sh -c "pip install kafka-python && 
+             python -c 'from kafka import KafkaProducer; import time;
+             p = KafkaProducer(bootstrap_servers=\"kafka:9092\");
+             print(\"Iniciando ERP con Kafka...\");
+             while True:
+                 p.send(\"pedidos\", b\"ORDEN-100: Camiseta Retail\");
+                 print(\"Evento enviado a Kafka: Nueva Orden de Compra\");
                  time.sleep(10)'"
 
-  
+  # Servicio 2: Inventario (Consumidor de eventos)
   inventory-service:
     image: python:3.9-slim
     container_name: inventory_consumer
     depends_on:
-      - broker
+      - kafka
     command: >
-      sh -c "pip install redis && 
-             python -c 'import redis; r = redis.Redis(host=\"broker\"); p = r.pubsub(); 
-             p.subscribe(\"pedidos\"); print(\"Inventario escuchando pedidos...\");
-             for m in p.listen(): 
-                 if m[\"type\"] == \"message\":
-                     print(f\"[NOTIFICACION RECIBIDA]: Actualizando stock para: {m[\"data\"].decode()}\")'"
+      sh -c "pip install kafka-python && 
+             python -c 'from kafka import KafkaConsumer;
+             c = KafkaConsumer(\"pedidos\", bootstrap_servers=\"kafka:9092\");
+             print(\"Inventario escuchando eventos de Kafka...\");
+             for m in c:
+                 print(f\"[NOTIFICACION KAFKA]: Procesando stock para: {m.value.decode()}\")'"
